--- a/app/src/main/res/layout/item_list_records.xml
+++ b/app/src/main/res/layout/item_list_records.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:padding="@dimen/padding_large"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
 
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    card_view:cardCornerRadius="10dp"
+    card_view:cardElevation="2dp"
+    android:layout_margin="@dimen/margin_small"
+    app:layout_constraintTop_toTopOf="parent"
+    >
+
+
+
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:padding="@dimen/padding_large"
+
+            android:layout_height="match_parent">
 
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -24,25 +38,24 @@
         android:id="@+id/tv_volume"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/year_text"
-        android:textSize="@dimen/text_large"
+        android:text="@string/volume_text"
+        android:textSize="@dimen/text_medium"
         app:layout_constraintTop_toBottomOf="@id/tv_year"
         app:layout_constraintLeft_toLeftOf="parent"
         />
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_decrease"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:src="@drawable/icon_decrease"
 
         />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
 
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
